Fix wrapping of Abilities and setting limit to 1025

--- a/src/styles/PokedexCard.scss
+++ b/src/styles/PokedexCard.scss
@@ -148,6 +148,7 @@
     padding: 0;
     margin: 0;
     display: flex;
+    flex-wrap: wrap;
 
     gap: 0.5rem;
 
